# NoLimitConnect

./: .gitignore  .gitlab-ci.yml  404.html  BSDL  CHANGELOG.txt  CMakeLists.txt  CMakePresets.json  CNAME  CONTRIBUTING.md  COPYING  KNOWN-ISSUES.txt  LEGAL  LICENSE  NlcNSIS_TestScript.nsi  README.md  README_BuildNoLimitConnect_All.txt  RELEASE-NOTES.md  RELEASE-NOTES.txt  SECURITY.md  VISUAL-CODE-README.md  com.nolimitconnect.NoLimitConnect.desktop  com.nolimitconnect.NoLimitConnect.metainfo.xml  com.nolimitconnect.NoLimitConnect.xml  com.nolimitconnect.NoLimitConnect.yml  create_build_directories.sh  index.html  install-flatpak.sh  io.gitlab.nolimitcode.NoLimitConnect.xml  io.gitlab.nolimitcode.NoLimitConnect.yml  mkdocs.yml  org.nolimitconnect.NoLimitConnect.desktop  org.nolimitconnect.NoLimitConnect.metainfo.xml  org.nolimitconnect.NoLimitConnect.yml  setup_nolimitconnect_docs.sh  setup_nolimitconnect_docs_full.sh  sitemap.xml
installer/: CMakeLists.txt  LICENSE.GPL  README.md
installer/android/: apk.flatpack
installer/flatpak/: flatpak.cmake
installer/nsis/: nsis.cmake
libs/MediaToolsLib/: CMakeLists.txt  MJPEGReader_mtools.cpp  MediaTools.h  MyOpusHeader.h  OggBuffer.h  OggBuffer_mtools.cpp  OggStream_mtools.cpp  OpusAudioDecoder.h  OpusAudioDecoder_mtools.cpp  OpusAudioEncoder.h  OpusFileDecoder.h  OpusFileDecoder_mtools.cpp  OpusFileEncoder.h  OpusFileEncoder_mtools.cpp  SndDefs.h  SndReader.h  SndReader_mtools.cpp  SndWriter.h  SndWriter_mtools.cpp
libs/ffmpeg/libpostproc/: CMakeLists.txt
libs/ffmpeg/libswresample/: CMakeLists.txt
libs/libcrossguid/: CMakeLists.txt
libs/libfreetype/: CMakeLists.txt
libs/libmfx/: CMakeLists.txt
libs/libminiaudio/: CHANGES.md  CMakeLists.txt
libs/libogg/: CMakeLists.txt
libs/libtwolame/: CMakeLists.txt
libs/libwav-decoder/: CMakeLists.txt
libs/libwebrtc-aec/: CMakeLists.txt  WebRtcAec.cpp  WebRtcAec.h
libs/libwebrtc-aec/abseil-cpp/: CMakeLists.txt
libs/libwebrtc-aec/apm/: CMakeLists.txt  WebRtcAec.cpp  WebRtcAec.h  logging_stubs.cc
nolimitgui/sandboxqt/AnalogClockAppFromExamples/: CMakeLists.txt
nolimitgui/sandboxqt/Assembly1234TestApp/: Assembly1234QtGui.pro  Assembly1234QtLib.pro  BuildSandboxApps_All.pro  CMakeLists.txt
nolimitlib/DependLibs/: CMakeLists.txt  CMakeListsSave.txt
nolimitlib/DependLibs/CoreLib/: AppErr.h  AppErr_corelib.cpp  AppVersion.h  AssetDefs.cpp  AssetDefs.h  BinaryBlob.cpp  BinaryBlob.h  CMakeLists.txt  DbBase.h  DbBase_corelib.cpp  HostedId.cpp  InetAddress.cpp  InetAddress.h  InetAddressParse.cpp  InetAddressParse.h  Invite.cpp  Invite.h  MediaCallbackInterface.h  ObjectCommon.h  ObjectCommonDefs.h  ObjectCommon_corelib.cpp  OsDetect.h  OsDetect_corelib.cpp  PktBlobEntry.cpp  PluginId.cpp  Sha1ClientInfo.cpp  Sha1ClientInfo.h  Sha1GeneratorCallback.h  Sha1GeneratorMgr.cpp  Sha1GeneratorMgr.h  Sha1Info.cpp  Sha1Info.h  StdOutRedirect.h  StdOutRedirect_corelib.cpp  StringListBinary.cpp  StringListBinary.h  TimeIntervalEstimator.h  VFile.cpp  VFile.h  VFileMgrFileIo.cpp  (+100 more)
nolimitlib/DependLibs/MediaToolsLib/: AviDefs.h  AviDefs_mtools.cpp  CMakeLists.txt  MJPEGReader.h  MJPEGReader_mtools.cpp  MJPEGWriter.h  MJPEGWriter_mtools.cpp  MediaTools.h  MediaTools_mtools.cpp  MyOpusHeader.h  MyOpusHeader_mtools.cpp  OggBuffer.h  OggBuffer_mtools.cpp  OggStream.h  OggStream_mtools.cpp  OpusAudioDecoder.h  OpusAudioDecoder_mtools.cpp  OpusAudioEncoder.h  OpusAudioEncoder_mtools.cpp  OpusCallbackInterface.h  OpusFileDecoder.h  OpusFileDecoder_mtools.cpp  OpusFileEncoder.h  OpusFileEncoder_mtools.cpp  SndDefs.h  SndReader.h  SndReader_mtools.cpp  SndWriter.h  SndWriter_mtools.cpp
nolimitlib/DependLibs/MiniZip/: Zipper.cpp  Zipper.h
nolimitlib/DependLibs/NetLib/: CMakeLists.txt  ISktStatCallbackInterface.h  InetAddress.cpp  InetAddress.h  NetHostSetting.cpp  NetHostSetting.h  NetHostSettingDefs.h  NetSettings.cpp  NetSettings.h  VxAnyRandomPort.h  VxBaseSktInfo.cpp  VxBaseSktInfo.h  VxClientMgr.cpp  VxClientMgr.h  VxFileXferInfo.cpp  VxFileXferInfo.h  VxGetExternalIps.cpp  VxGetExternalIps.h  VxGetRandomPort.cpp  VxGetRandomPort.h  VxHackerMgr.cpp  VxHackerMgr.h  VxHackerRecord.cpp  VxHackerRecord.h  VxHttpParse.cpp  VxHttpParse.h  VxHttpRequest.cpp  VxHttpRequest.h  VxHttpValuePair.cpp  VxHttpValuePair.h  VxListenLogic.cpp  VxListenLogic.h  VxPeerMgr.cpp  VxPeerMgr.h  VxPortForward.cpp  VxPortForward.h  VxProxy.cpp  VxProxy.h  VxResolveHost.cpp  VxResolveHost.h  (+34 more)
nolimitlib/DependLibs/PktLib/: CMakeLists.txt  ConnectId.cpp  ConnectId.h  GroupieId.cpp  GroupieId.h  HostUserSessionId.cpp  HostUserSessionId.h  HostedId.cpp  HostedId.h  MatchParams.cpp  MatchParams.h  PktAnnList.cpp  PktAnnList.h  PktAnnounce.cpp  PktAnnounce.h  PktBlobEntry.cpp  PktBlobEntry.h  PktChatReq.cpp  PktChatReq.h  PktDebugHelpers.cpp  PktDebugHelpers.h  PktHostAnnounce.cpp  PktHostAnnounce.h  PktPluginHandlerBase.cpp  PktPluginHandlerBase.h  PktRequestErrors.h  PktSysHandlerBase.cpp  PktSysHandlerBase.h  PktTcpPunch.cpp  PktTcpPunch.h  PktTypes.h  PktVoiceReply.cpp  PktVoiceReply.h  PktVoiceReq.cpp  PktVoiceReq.h  PktsAssetXfer.cpp  PktsAssetXfer.h  PktsBaseXfer.cpp  PktsBaseXfer.h  PktsBlobXfer.cpp  (+85 more)
nolimitlib/DependLibs/Python-2.7.14/: pyconfig_android.h
nolimitlib/DependLibs/Upnp2Lib/: CMakeLists.txt  UpnpParser.cpp  UpnpParser.h  UpnpPortForward.cpp  UpnpPortForward.h
nolimitlib/DependLibs/VxVideoLib/: CMakeLists.txt  VxRescaleRgb.cpp  VxRescaleRgb.h  VxVidCap.cpp  VxVidCapImp.cpp  VxVideoConvert.cpp  VxVideoConvert.h
nolimitlib/DependLibs/bzlib/: CMakeLists.txt  bzlib.h
nolimitlib/DependLibs/ffmpeg/: CMakeLists.txt  config_components.h  config_ffmpeg_defs.h  config_ffmpeg_linux.asm
nolimitlib/DependLibs/libaemc-webrtc/: AecmWebRtc.cpp  AecmWebRtc.h  CMakeLists.txt  aecm_core.c  spl_init.c
nolimitlib/DependLibs/libarmrwbenc/: CMakeLists.txt
nolimitlib/DependLibs/libasprintf/: CMakeLists.txt  config_libasprintf.h  vasnprintf.c
nolimitlib/DependLibs/libass/: CMakeLists.txt
nolimitlib/DependLibs/libbluray/: DllLibbluray.h
nolimitlib/DependLibs/libbzip2/: CMakeLists.txt
(+5132 files in other folders)
